Update uses of wasteful primitive-wrapper constructors to valueOf(...).